Update account config for users
